--- a/styles/globals.css
+++ b/styles/globals.css
@@ -467,7 +467,7 @@ hr.divider {
 
   .topBar{
     justify-content:space-between;
-    padding: 0 10px+
+    padding: 0 10px;
   }
 
   .carrousel h1{
